old_data/slurm_compass_code_corr_err_l6_100000_large_d_parallel_2.err
  File "/hpc/group/brownlab/am1155/correlated_error_biased_noise/compass_code_correlated_error.py", line 223
    folder = f"l{l}_shots{num_shots}_d{"_".join(map(str, d_list))}"
                                        ^
SyntaxError: f-string: expecting '}'
  File "/hpc/group/brownlab/am1155/correlated_error_biased_noise/compass_code_correlated_error.py", line 223
    folder = f"l{l}_shots{num_shots}_d{"_".join(map(str, d_list))}"
                                        ^
SyntaxError: f-string: expecting '}'
